--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React App</title>
+  <title>Vault Gucci</title>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=501460a02591764d66f7a55bd8af6426"></script>
 </head>
 
 <body>
